--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -16,11 +16,11 @@
    "metadata": {},
    "source": [
     "## Section 1:  Introductory Concepts Outline\n",
-    "* #### Procedural Statements\n",
-    "* #### Strings and String Formatting\n",
-    "* #### Numbers and Arithmetic Operations\n",
-    "* #### Data Structures\n",
-    "* #### Writing and running Scripts"
+    "*  Procedural Statements\n",
+    "*  Strings and String Formatting\n",
+    "*  Numbers and Arithmetic Operations\n",
+    "*  Data Structures\n",
+    "*  Writing and running Scripts"
    ]
   },
   {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "'This phrase is multiple sentenances long.There phrase can be formatted like simpler sentances,for example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,167 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numbers and Arithmetic Operations"
+    "### Numbers and Arithmetic Operations\n",
+    "Python is also a built-in calculator.  Without installing any additional libraries it can do many simple and complex arithmetic operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding and Subtracting Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two Steps Forward:  One Step Back = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "steps = (1+1)-1\n",
+    "print(f\"Two Steps Forward:  One Step Back = {steps}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multiplication with Decimals\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I weight 200lbs, and 20.0lbs of that is fat\n"
+     ]
+    }
+   ],
+   "source": [
+    "body_fat_percentage = 0.10\n",
+    "weight = 200\n",
+    "fat_total = body_fat_percentage * weight\n",
+    "print(f\"I weight 200lbs, and {fat_total}lbs of that is fat\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using Exponents\n",
+    "Using the math library it is straightforward to call 2 to the 3rd power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.pow(2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Converting Between different numerical types\n",
+    "There are many numerical forms to be aware of in Python.\n",
+    "A couple of the most common are:\n",
+    "* Integers\n",
+    "* Floats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 is type [int]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 100\n",
+    "num_type = type(number).__name__\n",
+    "print(f\"{number} is type [{num_type}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0 is type [float]\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = float(100)\n",
+    "num_type = type(number).__name__\n",
+    "print(f\"{number} is type [{num_type}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Numbers can also be rounded\n",
+    "Below a decimal with many digits is rounded to two digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.91"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "too_many_decimals = 1.912345897\n",
+    "round(too_many_decimals, 2)"
    ]
   },
   {
