--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "'armbar'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "['Brazilian', 'Jiu', 'Jitsu']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "['Brazilian', 'Jiu', 'Jitsu']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "'BRAZILIAN JIU JITSU'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "'Br'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "19"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "'Brazilian Jiu Jitsu is my favorite Martial Art'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "'I love practicing my favorite Martial Art, Brazilian Jiu Jitsu'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "'\\nThis phrase is multiple sentenances long.\\nThere phrase can be formatted like simpler sentances,\\nfor example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu\\n'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "'This phrase is multiple sentenances long.There phrase can be formatted like simpler sentances,for example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "8.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -629,12 +629,12 @@
    "metadata": {},
    "source": [
     "#### Numbers can also be rounded\n",
-    "Below a decimal with many digits is rounded to two digits"
+    "Below a decimal with many digits is rounded to two decimals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "1.91"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,6 +651,98 @@
    "source": [
     "too_many_decimals = 1.912345897\n",
     "round(too_many_decimals, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Data Structures\n",
+    "Python has a couple of core Data Structures that are used very frequently\n",
+    " \n",
+    " * Lists\n",
+    " * Dictionaries\n",
+    " \n",
+    "Dictionaries and lists are the real workhorses of Python, but there are also other Data Structers like tuples, sets, Counters, etc, that are worth exploring too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dictionaries\n",
+    "Dictionaries are good at solving many problems, much like Python.  In the example below, a list of Brazilian Jiu Jitsu attacks are put into a dictionary.  The \"key\" is the attack, and the \"value\" is the half of the body the attack is on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submissions = {\"armbar\": \"upper_body\", \n",
+    "               \"arm_triangle\": \"upper_body\", \n",
+    "               \"heel_hook\": \"lower_body\", \n",
+    "               \"knee_bar\": \"lower_body\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A common dictionary pattern is iterate on a dictionary by using the items method.  In the example below the key and the value are printed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The armbar is an attack on the upper_body\n",
+      "The arm_triangle is an attack on the upper_body\n",
+      "The heel_hook is an attack on the lower_body\n",
+      "The knee_bar is an attack on the lower_body\n"
+     ]
+    }
+   ],
+   "source": [
+    "for submission, body_part in submissions.items():\n",
+    "    print(f\"The {submission} is an attack on the {body_part}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries can also be used to filter.  In the example below, only the submission attacks on the upper body are displayed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are upper_body submission attacks in Brazilian Jiu Jitsu:\n",
+      "armbar\n",
+      "arm_triangle\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"These are upper_body submission attacks in Brazilian Jiu Jitsu:\")\n",
+    "for submission, body_part in submissions.items():\n",
+    "    if body_part == \"upper_body\":\n",
+    "        print(submission)"
    ]
   },
   {
