--- a/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_1(Introductory_Concepts).ipynb
@@ -690,12 +690,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A common dictionary pattern is iterate on a dictionary by using the items method.  In the example below the key and the value are printed."
+    "A common dictionary pattern is iterate on a dictionary by using the items method.  In the example below the key and the value are printed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 122,
    "metadata": {
     "scrolled": true
    },
@@ -720,12 +720,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries can also be used to filter.  In the example below, only the submission attacks on the upper body are displayed."
+    "Dictionaries can also be used to filter.  In the example below, only the submission attacks on the upper body are displayed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -744,6 +744,118 @@
     "    if body_part == \"upper_body\":\n",
     "        print(submission)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionary keys and values can also be selected:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are keys: dict_keys(['armbar', 'arm_triangle', 'heel_hook', 'knee_bar'])\n",
+      "These are values: dict_values(['upper_body', 'upper_body', 'lower_body', 'lower_body'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"These are keys: {submissions.keys()}\")\n",
+    "print(f\"These are values: {submissions.values()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lists\n",
+    "Lists are also very commonly used in Python.  They allow for sequential collections.  Lists can hold dictionaries, just as dictionaries can hold lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_bjj_positions = [\"mount\", \"full-guard\", \"half-guard\", \n",
+    "                         \"turtle\", \"side-control\", \"rear-mount\", \n",
+    "                         \"knee-on-belly\", \"north-south\", \"open-guard\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "full-guard\n",
+      "half-guard\n",
+      "open-guard\n"
+     ]
+    }
+   ],
+   "source": [
+    "for postion in list_of_bjj_positions:\n",
+    "    if \"guard\" in postion:\n",
+    "        print(postion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists can also be used to select elements by slicing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First position: ['mount']\n",
+      "Last position: ['open-guard']\n",
+      "First three positions: ['mount', 'full-guard', 'half-guard']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'First position: {list_of_bjj_positions[:1]}')\n",
+    "print(f'Last position: {list_of_bjj_positions[-1:]}')\n",
+    "print(f'First three positions: {list_of_bjj_positions[0:3]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mount']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
