--- a/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "'bjj'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,26 +97,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This function returns the name of my favorite martial art'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "##### Docstrings of functions can be printed out by referring to ```__doc__```"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -125,12 +114,154 @@
        "'This function returns the name of my favorite martial art'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "favorite_martial_art_with_docstring.__doc__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function arguments: positional, keyword\n",
+    "A function is most useful when arguments are passed to the function.\n",
+    "New values for times are processed inside the function.\n",
+    "This function is also a 'positional' argument, vs a keyword argument.  Positional arguments are processed in the order they are created in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def practice(times):\n",
+    "    print(f\"I like to practice {times} times a day\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like to practice 2 times a day\n"
+     ]
+    }
+   ],
+   "source": [
+    "practice(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like to practice 3 times a day\n"
+     ]
+    }
+   ],
+   "source": [
+    "practice(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Positional Arguments are processed in order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def practice(times, technique, duration):\n",
+    "    print(f\"I like to practice {technique}, {times} times a day, for {duration} minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like to practice leg locks, 3 times a day, for 45 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "practice(3, \"leg locks\", 45)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Keyword Arguments are processed by key, value and can have default values\n",
+    "One handy feature of keyword arguments is that you can set defaults and only change the defaults you want to change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def practice(times=2, technique=\"kimura\", duration=60):\n",
+    "    print(f\"I like to practice {technique}, {times} times a day, for {duration} minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like to practice kimura, 2 times a day, for 60 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "practice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like to practice kimura, 2 times a day, for 90 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "practice(duration=90)"
+   ]
   },
   {
    "cell_type": "code",
