adding functions section

--- a/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "'bjj'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "'This function returns the name of my favorite martial art'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +261,478 @@
    ],
    "source": [
     "practice(duration=90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### \\*\\*kwargs and \\*args\n",
+    "* allow dynamic argument passing to functions\n",
+    "* Should be used with discretion because it can make code hard to understand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attack_techniques(**kwargs):\n",
+    "    \"\"\"This accepts any number of keyword arguments\"\"\"\n",
+    "    \n",
+    "    for name, attack in kwargs.items():\n",
+    "        print(f\"This is attack I would like to practice: {attack}\")\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is attack I would like to practice: kimura\n",
+      "This is attack I would like to practice: straight_ankle_lock\n",
+      "This is attack I would like to practice: arm_triangle\n"
+     ]
+    }
+   ],
+   "source": [
+    "attack_techniques(arm_attack=\"kimura\", \n",
+    "                  leg_attack=\"straight_ankle_lock\", neck_attach=\"arm_triangle\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### passing dictionary of keywords to function\n",
+    "**kwargs syntax can also be used to pass in arguments all at once"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attacks = {\"arm_attack\":\"kimura\", \n",
+    "           \"leg_attack\":\"straight_ankle_lock\", \n",
+    "           \"neck_attach\":\"arm_triangle\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is attack I would like to practice: kimura\n",
+      "This is attack I would like to practice: straight_ankle_lock\n",
+      "This is attack I would like to practice: arm_triangle\n"
+     ]
+    }
+   ],
+   "source": [
+    "attack_techniques(**attacks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Passing Around Functions\n",
+    "Object-Oriented programming is a very popular way to program, but it isn't the only style available in Python.  For concurrency and for Data Science, functional programming fits as a complementary style.\n",
+    "\n",
+    "In the example, below a function can be used inside of another function by being passed into the function itself as an argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attack_location(technique):\n",
+    "    \"\"\"Return the location of an attack\"\"\"\n",
+    "    \n",
+    "    attacks = {\"kimura\": \"arm_attack\",\n",
+    "           \"straight_ankle_lock\":\"leg_attack\", \n",
+    "           \"arm_triangle\":\"neck_attach\"}\n",
+    "    if technique in attacks:\n",
+    "        return attacks[technique]\n",
+    "    return \"Unknown\"\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arm_attack'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attack_location(\"kimura\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Unknown'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attack_location(\"bear hug\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiple_attacks(attack_location_function):\n",
+    "    \"\"\"Takes a function that categorizes attacks and returns location\"\"\"\n",
+    "    \n",
+    "    new_attacks_list = [\"rear_naked_choke\", \"americana\", \"kimura\"]\n",
+    "    for attack in new_attacks_list:\n",
+    "        attack_location = attack_location_function(attack)\n",
+    "        print(f\"The location of attack {attack} is {attack_location}\")\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The location of attack rear_naked_choke is Unknown\n",
+      "The location of attack americana is Unknown\n",
+      "The location of attack kimura is arm_attack\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiple_attacks(attack_location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Closures and Functional Currying\n",
+    "Closurers are functions that contain other functions.\n",
+    "In Python, a common way to use them is to keep track of the state.\n",
+    "In the example below, the outer function, attack_counter keeps track of counts of attacks.\n",
+    "The inner fuction attack_filter uses the \"nonlocal\" keyword in Python3, to modify the variable in the outer function.\n",
+    "\n",
+    "This approach is called **\"functional currying\"**.  It allows for a specialized function to be created from general functions.  As shown below, this style of function could be the basis of a simple video game or maybe for the statistics crew of a mma match."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attack_counter():\n",
+    "    \"\"\"Counts number of attacks on part of body\"\"\"\n",
+    "    lower_body_counter = 0\n",
+    "    upper_body_counter = 0\n",
+    "    def attack_filter(attack):\n",
+    "        nonlocal lower_body_counter\n",
+    "        nonlocal upper_body_counter\n",
+    "        attacks = {\"kimura\": \"upper_body\",\n",
+    "           \"straight_ankle_lock\":\"lower_body\", \n",
+    "           \"arm_triangle\":\"upper_body\",\n",
+    "            \"keylock\": \"upper_body\",\n",
+    "            \"knee_bar\": \"lower_body\"}\n",
+    "        if attack in attacks:\n",
+    "            if attacks[attack] == \"upper_body\":\n",
+    "                upper_body_counter +=1\n",
+    "            if attacks[attack] == \"lower_body\":\n",
+    "                lower_body_counter +=1\n",
+    "        print(f\"Upper Body Attacks {upper_body_counter}, Lower Body Attacks {lower_body_counter}\")\n",
+    "    return attack_filter\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fight = attack_counter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper Body Attacks 1, Lower Body Attacks 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "fight(\"kimura\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper Body Attacks 1, Lower Body Attacks 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "fight(\"knee_bar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper Body Attacks 2, Lower Body Attacks 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "fight(\"keylock\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Functions that Yield (Generators)\n",
+    "A very useful style of programming is \"lazy evaluation\".  A generator is an example of that.  Generators yield an items at a time.\n",
+    "\n",
+    "The example below return an \"infinite\" random sequence of attacks.  The lazy portion comes into play in that while there is an infinite amount of values, they are only returned when the function is called."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lazy_return_random_attacks():\n",
+    "    \"\"\"Yield attacks each time\"\"\"\n",
+    "    import random\n",
+    "    attacks = {\"kimura\": \"upper_body\",\n",
+    "           \"straight_ankle_lock\":\"lower_body\", \n",
+    "           \"arm_triangle\":\"upper_body\",\n",
+    "            \"keylock\": \"upper_body\",\n",
+    "            \"knee_bar\": \"lower_body\"}\n",
+    "    while True:\n",
+    "        random_attack = random.choices(list(attacks.keys()))\n",
+    "        yield random_attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attack = lazy_return_random_attacks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['arm_triangle']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(attack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    attacks = {\"kimura\": \"upper_body\",\n",
+    "           \"straight_ankle_lock\":\"lower_body\", \n",
+    "           \"arm_triangle\":\"upper_body\",\n",
+    "            \"keylock\": \"upper_body\",\n",
+    "            \"knee_bar\": \"lower_body\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['keylock']\n",
+      "['knee_bar']\n",
+      "['knee_bar']\n",
+      "['knee_bar']\n",
+      "['kimura']\n",
+      "['arm_triangle']\n",
+      "['kimura']\n",
+      "['keylock']\n",
+      "['knee_bar']\n",
+      "['arm_triangle']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(10):\n",
+    "    print(next(attack))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Decorators:  Functions that wrap other functions\n",
+    "Another useful technique in Python is to use the decorator syntax to wrap one function with another function.\n",
+    "In the example below, a decorator is written that adds random sleep to each function call.  When combined with the previous \"infinite\" attack generator, it generates random sleeps between each function call."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randomized_speed_attack_decorator(function):\n",
+    "    \"\"\"Randomizes the speed of attacks\"\"\"\n",
+    "    \n",
+    "    import time\n",
+    "    import random\n",
+    "    \n",
+    "    def wrapper_func(*args, **kwargs):\n",
+    "        sleep_time = random.randint(0,3)\n",
+    "        print(f\"Attacking after {sleep_time} seconds\")\n",
+    "        time.sleep(sleep_time)\n",
+    "        return function(*args, **kwargs)\n",
+    "    return wrapper_func\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@randomized_speed_attack_decorator\n",
+    "def lazy_return_random_attacks():\n",
+    "    \"\"\"Yield attacks each time\"\"\"\n",
+    "    import random\n",
+    "    attacks = {\"kimura\": \"upper_body\",\n",
+    "           \"straight_ankle_lock\":\"lower_body\", \n",
+    "           \"arm_triangle\":\"upper_body\",\n",
+    "            \"keylock\": \"upper_body\",\n",
+    "            \"knee_bar\": \"lower_body\"}\n",
+    "    while True:\n",
+    "        random_attack = random.choices(list(attacks.keys()))\n",
+    "        yield random_attack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attacking after 3 seconds\n",
+      "['straight_ankle_lock']\n",
+      "Attacking after 1 seconds\n",
+      "['kimura']\n",
+      "Attacking after 0 seconds\n",
+      "['kimura']\n",
+      "Attacking after 3 seconds\n",
+      "['kimura']\n",
+      "Attacking after 0 seconds\n",
+      "['straight_ankle_lock']\n",
+      "Attacking after 1 seconds\n",
+      "['straight_ankle_lock']\n",
+      "Attacking after 3 seconds\n",
+      "['arm_triangle']\n",
+      "Attacking after 3 seconds\n",
+      "['kimura']\n",
+      "Attacking after 2 seconds\n",
+      "['keylock']\n",
+      "Attacking after 0 seconds\n",
+      "['straight_ankle_lock']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(10):\n",
+    "    print(next(lazy_return_random_attacks()))"
    ]
   },
   {
