adding functions section

--- a/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
+++ b/notebooks/Functional_Introduction_To_Python_Section_2(Functions).ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 2:  Introductory Concepts Outline\n",
+    "## Section 2:  Functions\n",
     "*  Writing Functions\n",
     "*  Function arguments:  positional, keyword\n",
     "*  Functional Currying:  Passing uncalled functions\n",
